# apps/backend/bindings/LiveClassesResponse.ts
@@ -1,0 +1,8 @@
+// This file was generated by [ts-rs](https://github.com/Aleph-Alpha/ts-rs). Do not edit this file manually.
+import type { LiveClassResponse } from "./LiveClassResponse";
+import type { PaginationResponse } from "./PaginationResponse";
+
+export type LiveClassesResponse = {
+  classes: Array<LiveClassResponse>;
+  pagination: PaginationResponse;
+};
